objects/Milestone_Payment__c.object
<CustomObject>
    <description>Payment records for milestone disbursements to grant recipients</description>
    <label>Milestone Payment</label>
    <nameField>
        <displayFormat>PAY-{000000}</displayFormat>
        <label>Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Relationships -->
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <label>Project Milestone</label>
        <referenceTo>Project_Milestone__c</referenceTo>
        <relationshipLabel>Milestone Payments</relationshipLabel>
        <relationshipName>Milestone_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <required>true</required>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Grant_Recipient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Grant Recipient</label>
        <referenceTo>Grant_Recipient__c</referenceTo>
        <relationshipLabel>Payments Received</relationshipLabel>
        <relationshipName>Payments_Received</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Payment Details -->
    <fields>
        <fullName>Payment_Amount_USD__c</fullName>
        <label>Payment Amount (USD)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount_Crypto__c</fullName>
        <label>Payment Amount (Crypto)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Crypto_Currency__c</fullName>
        <label>Crypto Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIL</fullName>
                    <default>true</default>
                    <label>JIL</label>
                </value>
                <value>
                    <fullName>USDC</fullName>
                </value>
                <value>
                    <fullName>USDT</fullName>
                </value>
                <value>
                    <fullName>ETH</fullName>
                </value>
                <value>
                    <fullName>BTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate (USD to Crypto)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crypto Transfer</fullName>
                    <default>true</default>
                    <label>Crypto Transfer</label>
                </value>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Blockchain Details (for crypto payments) -->
    <fields>
        <fullName>Transaction_Hash__c</fullName>
        <label>Transaction Hash</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
        <caseSensitive>true</caseSensitive>
    </fields>
    <fields>
        <fullName>Blockchain_Network__c</fullName>
        <label>Blockchain Network</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIL</fullName>
                    <default>true</default>
                    <label>JIL</label>
                </value>
                <value>
                    <fullName>Ethereum</fullName>
                </value>
                <value>
                    <fullName>Polygon</fullName>
                </value>
                <value>
                    <fullName>Solana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Wallet_Address__c</fullName>
        <label>From Wallet Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Wallet_Address__c</fullName>
        <label>To Wallet Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Number__c</fullName>
        <label>Block Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmations__c</fullName>
        <label>Confirmations</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Bank/Traditional Payment Details -->
    <fields>
        <fullName>Bank_Reference_Number__c</fullName>
        <label>Bank Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Number__c</fullName>
        <label>Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    
    <!-- Timing -->
    <fields>
        <fullName>Payment_Initiated_Date__c</fullName>
        <label>Payment Initiated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payment_Completed_Date__c</fullName>
        <label>Payment Completed Date</label>
        <type>DateTime</type>
    </fields>
    
    <!-- Status -->
    <fields>
        <fullName>Payment_Status__c</fullName>
        <label>Payment Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Approval -->
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approved_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Initiated_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Notes -->
    <fields>
        <fullName>Payment_Notes__c</fullName>
        <label>Payment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Reason__c</fullName>
        <label>Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>